--- a/src/template/s5/slide.html
+++ b/src/template/s5/slide.html
@@ -3,7 +3,7 @@
 [% image_html %]
 [% slide_content %]
 [%- UNLESS last -%]
-<small>continued...</small>
+<small>...</small>
 [% END %]
 </div>
 <!-- END slide -->
