デザイン整え

--- a/view/s5.html
+++ b/view/s5.html
@@ -36,6 +36,9 @@
     <ul>
         <li>blah blah blah</li>
         <li>blah blah blah</li>
+        <ul>
+            <li>sub li</li>
+        </ul>
     </ul>
 <small>...</small>
 </div>
