引用スタイル

--- a/view/s5.html
+++ b/view/s5.html
@@ -44,5 +44,19 @@
 </div>
 <!-- END slide -->
 
+<!-- BEGIN slide -->
+<div class="slide">
+    <h2>Title2</h2>
+    <blockquote>
+        <p>Freedom is what you do with what's been done to you.</p>
+    </blockquote>
+
+
+</div>
+<!-- END slide -->
+
+
+
+
 </body>
 </html>
