--- a/src/ui/pretty.css
+++ b/src/ui/pretty.css
@@ -23,7 +23,14 @@ ul, pre {margin: 0; line-height: 1em;}
 html, body {margin: 0; padding: 0;}
 
 blockquote, q {font-style: italic;}
-blockquote {padding: 0 2em 0.5em; margin: 0 1.5em 0.5em; text-align: center; font-size: 1em;}
+blockquote {
+    background: url(quoteclip.png) left bottom no-repeat;
+    padding: 0 2em 0 45px;
+    margin: .2em 1.5em 0.5em;
+    border-top: 3px solid #EEE;
+    border-right: 3px solid #EEE;
+    font-size: 1em;
+}
 blockquote p {margin: 0;}
 blockquote i {font-style: normal;}
 blockquote b {display: block; margin-top: 0.5em; font-weight: normal; font-size: smaller; font-style: normal;}
