ヘッダ調整

--- a/src/template/s5/s5.html
+++ b/src/template/s5/s5.html
@@ -20,7 +20,7 @@
 
 <div class="layout">
   <div id="currentSlide"></div>
-  <div id="header"></div>
+  <div id="header">[% presentation_title %]</div>
   <div id="footer">
     <h2>[% author_name %]</h2>
     <h2>[% author_email %]</h2>
