--- a/view/s5.html
+++ b/view/s5.html
@@ -15,7 +15,7 @@
 
 <div class="layout">
   <div id="currentSlide"></div>
-  <div id="header"></div>
+  <div id="header">[% presentation_title %]</div>
   <div id="footer">
     <h2>Masayuki Matsuki</h2>
     <h2>y.songmu@gmail.com</h2>
@@ -52,11 +52,12 @@
     </blockquote>
 
 
+<pre class="formatter_pre">#!/usr/bin/env perl
+use strict;
+use warnigns;</pre>
+
 </div>
 <!-- END slide -->
-
-
-
 
 </body>
 </html>
