--- a/src/ui/pretty.css
+++ b/src/ui/pretty.css
@@ -63,11 +63,9 @@ p, li {
 img.leader {display: block; margin: 0 auto;}
 
 
-div#header, div#footer {color: #AAB;
+div#header, div#footer {
   font-family: Verdana, Helvetica, sans-serif;}
-div#header {background: #0000FF;
-  line-height: 1px;}
-div#footer {font-size: 0.5em; font-weight: bold; padding: 1em 0; color: #666; background-color: #CCCCFF;}
+div#footer {color: #AAB; font-size: 0.5em; font-weight: bold; padding: 1em 0; color: #666; background-color: #CCCCFF;}
 #footer h1, #footer h2 {display: block; padding: 0 1em;}
 #footer h2 {margin-top: 0.5em;}
 
