--- a/view/s5.html
+++ b/view/s5.html
@@ -9,6 +9,7 @@
 <link rel="stylesheet" href="ui/slides.css" type="text/css" media="projection" id="slideProj" />
 <link rel="stylesheet" href="ui/opera.css" type="text/css" media="projection" id="operaFix" />
 <link rel="stylesheet" href="ui/print.css" type="text/css" media="print" id="slidePrint" />
+<link rel="stylesheet" href="ui/prettify.css" type="text/css" media="screen, projection" />
 <script src="ui/slides.js" type="text/javascript"></script>
 </head>
 <body>
@@ -59,5 +60,8 @@ use warnigns;</pre>
 </div>
 <!-- END slide -->
 
+<script type="text/javascript" src="ui/jquery-1.8.0.min.js"></script>
+<script type="text/javascript" src="ui/prettify.js"></script>
+<script type="text/javascript" src="ui/init.js"></script>
 </body>
 </html>
