--- a/view/test.html
+++ b/view/test.html
@@ -33,6 +33,18 @@
 
 <!-- BEGIN slide -->
 <div class="slide">
+<img src="https://ja.gravatar.com/userimage/11373516/cf8c27f433fc7c7ad4ee8b89af8d99ab.jpg?size=100" />
+<h2>me</h2>
+<p>
+</p>
+<ul>
+<li>Songmu</li>
+</ul>
+</div>
+<!-- END slide -->
+
+<!-- BEGIN slide -->
+<div class="slide">
     <h2>Title</h2>
     <ul>
         <li>blah blah blah</li>
