--- a/src/ui/pretty.css
+++ b/src/ui/pretty.css
@@ -154,10 +154,23 @@ div.image {
 	padding: 20px;
 }
 
-p { 
+p {
 	margin-left: 85px;
 }
 
 div.image p, #slide0 p {
 	margin-left: 0;
+}
+
+small { color: #999; }
+
+.slide img {
+    float: left;
+    background: #fff;
+    margin: 0 10px 10px 0;
+    padding: 3px;
+    border-top: 1px solid #ccc;
+    border-left: 1px solid #ccc;
+    border-right: 1px solid #999;
+    border-bottom: 1px solid #999;
 }
