--- a/view/test.html
+++ b/view/test.html
@@ -72,6 +72,13 @@ use warnigns;</pre>
 </div>
 <!-- END slide -->
 
+
+<!-- BEGIN slide -->
+<div class="slide">
+<h1>Takahashi Method!</h1>
+</div>
+<!-- END slide -->
+
 <script type="text/javascript" src="ui/jquery-1.8.0.min.js"></script>
 <script type="text/javascript" src="ui/prettify.js"></script>
 <script type="text/javascript" src="ui/init.js"></script>
